<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.uba.fi.taller2.mensajerocliente.Activities.ListaDeConversacionesActivity">
    <item android:id="@+id/action_nueva_conversacion" android:title="@string/nueva_conversacion"
        android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@android:drawable/ic_input_add"/>
    <item android:id="@+id/action_ver_archivadas" android:title="@string/conversaciones_archivadas"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_editar_perfil" android:title="@string/editar_mi_perfil"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_cerrar_sesion" android:title="@string/cerrar_sesion"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_mensaje_broadcast" android:title="@string/mensaje_broadcast"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
