<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:background="@drawable/playa"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="ar.uba.fi.taller2.mensajerocliente.Activities.RegistroActivity">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.95"></RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Error"
            android:id="@+id/textError"
            android:textColor="#ffff0000"
            android:visibility="invisible"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editUsuario"
            android:hint="@string/usuario_etiqueta"
            android:layout_below="@+id/textError"
            android:inputType="text"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword"
            android:layout_weight="60"
            android:hint="@string/password_etiqueta"
            android:layout_below="@+id/editUsuario"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPasswordNueva"
            android:layout_below="@+id/editPassword"
            android:hint="@string/repetir_contraseña"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPasswordNueva"
            android:text="Edad"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            />

        <Spinner
            android:id="@+id/spinnerEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEdad" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_registrarse"
            android:id="@+id/buttonBuscar"
            android:layout_below="@+id/spinnerEdad"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:nestedScrollingEnabled="false"
            android:textColor="#ffffff"
            android:background="#FF17009A"
            android:onClick="registracion" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.95"></RelativeLayout>
</LinearLayout>

</RelativeLayout>
