<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/paris3"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ar.uba.fi.taller2.mensajerocliente.Activities.IniciarSesionActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.95"></RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageView2"
                android:src="@drawable/avion"
                android:layout_alignParentRight="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="false"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textError"
                android:textColor="#ffff0000"
                android:layout_below="@+id/imageView2"
                android:editable="false"
                android:visibility="invisible"
                android:text="Error"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editUsuario"
                android:hint="@string/usuario_etiqueta"
                android:layout_below="@+id/textError"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editPassword"
                android:layout_weight="60"
                android:hint="@string/password_etiqueta"
                android:layout_below="@+id/editUsuario" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion_boton"
                android:layout_alignParentRight="true"
                android:id="@+id/buttonIniciarSesion"
                android:nestedScrollingEnabled="false"
                android:elegantTextHeight="false"
                android:onClick="abrirConversaciones"
                android:layout_below="@+id/editPassword"
                android:enabled="true"
                android:layout_alignRight="@+id/buttonBuscar"
                android:textColor="#ffffff"
                android:background="#FF17009A" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_registrarse"
                android:layout_alignParentLeft="true"
                android:id="@+id/buttonBuscar"
                android:nestedScrollingEnabled="false"
                android:elegantTextHeight="false"
                android:onClick="abrirRegistro"
                android:layout_below="@+id/editPassword"
                android:enabled="true"
                android:textColor="#ffffff"
                android:background="#FF17009A" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.95"></RelativeLayout>
    </LinearLayout>

</RelativeLayout>
